# wfc

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README  Readme.md  ad__callback_8hpp_source.html  aggregated__json_8hpp_source.html  annotated.html  asio_8hpp_source.html  basic__component_8hpp_source.html  basic__domain_8hpp_source.html  basic__engine_8hpp_source.html  basic__options_8hpp_source.html  boost_8hpp_source.html  build__info_8hpp_source.html  build_info.sh  classes.html  classwfc_1_1basic__domain-members.html  classwfc_1_1basic__domain.html  classwfc_1_1domain__object-members.html  classwfc_1_1domain__object.html  classwfc_1_1instance-members.html  classwfc_1_1instance.html  classwfc_1_1jsonrpc_1_1service__multiton-members.html  classwfc_1_1jsonrpc_1_1service__multiton.html  classwfc_1_1multiton-members.html  classwfc_1_1multiton.html  classwfc_1_1singleton-members.html  classwfc_1_1singleton.html  classwfc_1_1vars-members.html  classwfc_1_1vars.html  classwfc_1_1workflow-members.html  classwfc_1_1workflow.html  component_8hpp_source.html  component__features_8hpp_source.html  component__list_8hpp_source.html  (+130 more)
examples/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp
examples/core_package/: CMakeLists.txt  core_package.cpp  core_package.hpp
examples/example_package/: CMakeLists.txt  example_package.cpp  example_package.hpp
examples/jsonrpc/: call.cpp  incoming_holder.cpp
tests/: CMakeLists.txt
tests-refact/: CMakeLists.txt
tests-refact/asio/: asio_test.cpp
tests-refact/fas/: aspect_test.cpp  type_list_test.cpp
tests-refact/io/: accept1_test.cpp  reader0_test.cpp  reader1_test.cpp  rn_tcp_server_test.cpp  writer5_test.cpp
tests-refact/jitest/: test_evalator.json  test_evalator.py
tests-refact/jsonrpc/: CMakeLists.txt  jsonrpc2_test.cpp
tests-refact/logger/: logstream_test.cpp
tests-refact/module/: CMakeLists.txt  object_base_test.cpp
tests-refact/provider/: provider_test.cpp
tests-refact/wfc/: CMakeLists.txt  wfc_test.cpp
tests/asio/: CMakeLists.txt  asio_test.cpp
tests/comet/: CMakeLists.txt  comet_test.cpp
tests/core/: CMakeLists.txt  registry_test.cpp  test_core.cpp  vars_suite.cpp
tests/fas/: CMakeLists.txt  aspect_test.cpp  type_list_test.cpp
tests/gateway/: CMakeLists.txt  provider_test.cpp
tests/inet/: CMakeLists.txt  conn2_test.cpp  conn_test.cpp  server_tcp_test.cpp  server_test.cpp  server_udp_test.cpp
tests/io/: CMakeLists.txt  accept1_test.cpp  connection1_test.cpp  logger.cpp  reader0_test.cpp  reader1_test.cpp  reader2_test.cpp  reader3_test.cpp  reader4_test.cpp  reader5_test.cpp  reader_rn0_test.cpp  reader_rn1_test.cpp  reader_rn2_test.cpp  reader_rn3_test.cpp  reader_rn4_test.cpp  reader_rn5_test.cpp  rn_tcp_server_test.cpp  rpc_tcp_test.cpp  writer0_test.cpp  writer5_test.cpp  writer_rn5_test.cpp
tests/jitest/: test_evalator.json  test_evalator.py
tests/jsonrpc/: CMakeLists.txt  jsonrpc1_test.cpp  jsonrpc2_test.cpp  jsonrpc_test.cpp  server_test.cpp
tests/logger/: CMakeLists.txt  logger_test.cpp  logstream_test.cpp
tests/module/: CMakeLists.txt  domain_test.cpp  instance_test.cpp  module_test.cpp  object_base_test.cpp  object_impl_test.cpp  object_test.cpp  registry_test.cpp
tests/provider/: CMakeLists.txt  provider_test.cpp  provider_test_old.cpp
tests/pubsub/: CMakeLists.txt  pubsub_test.cpp
tests/service/: CMakeLists.txt  echo1bench.cpp  echo2bench.cpp  logger.cpp  service1_test.cpp
tests/wfc/: wfc_test.cpp
wfc/: CMakeLists.txt  asio.hpp  boost.hpp  domain_object.hpp  gateway.hpp  iinterface.cpp  iinterface.hpp  io_service.hpp  json.hpp  jsonrpc.hpp  logger.hpp  memory.hpp  mutex.hpp  name.hpp  rvs_log.txt  service.hpp  testing.hpp  version.hpp  wfc.cpp  wfc.hpp  wfc_exit.cpp  wfc_exit.hpp  winterface.cpp  winterface.hpp  workflow.hpp
wfc/asio/: connection.hpp  server.hpp  server_config.hpp  tags.hpp  types.hpp
wfc/callback/: callback_owner.hpp  callback_status.hpp
wfc/callback.tmp/: callback_list.hpp  callback_status.hpp
wfc/core/: abort.hpp  build_info.hpp  callback_owner.hpp  core_status.hpp  core_status_json.hpp  cpuset.cpp  cpuset.hpp  except.hpp  extended_args.cpp  extended_args.hpp  fire_list.hpp  global.cpp  global.hpp  ibuild_info.hpp  iconfig.hpp  icore.hpp  iinterface.hpp  imodule.hpp  instance_args.cpp  instance_args.hpp  iobject.hpp  ipackage.hpp  istartup.hpp  module_options.hpp  object_registry.cpp  object_registry.hpp  registry.hpp  thread_manager.cpp  thread_manager.hpp  threads_map.cpp  threads_map.hpp  vars.cpp  vars.hpp  wfcglobal.cpp  wfcglobal.hpp  workflow.cpp  workflow.hpp  workflow_options.hpp  workflow_options_json.hpp
wfc/fas.del/: nth_cast.hpp  scatter_hierarchy.hpp  tag.hpp
wfc/gateway/: client_options.hpp  gateway.cpp  gateway.hpp  gateway_config.hpp  multi_client.hpp  multi_client_options.hpp  provider.hpp  provider_config.hpp  provider_config_json.hpp  pubsub_options.hpp  tcp_client.cpp  tcp_client.hpp  tcp_options.hpp  udp_options.hpp
wfc/inet/: accept_thread.hpp  ad_acceptor.hpp  ad_connection_handle.hpp  ad_mt_acceptor.hpp  ad_st_acceptor.hpp  connection.hpp  connection_aspect.hpp  connection_base.hpp  connection_class.hpp  connection_manager.hpp  context.hpp  echo_connection.del.hpp  echo_connection.hpp  iconnection.hpp  server.hpp  server_aspect.hpp  server_config.hpp  server_config_json.hpp  server_tcp.hpp  server_tcp_config.hpp  server_tcp_config_json.hpp  tags.hpp  tcp_server.del.hpp  tcp_server.hpp  work_thread.hpp
wfc/inet.old/: epoller.hpp  imux.hpp  imux_observer.hpp
wfc/io/: async_read_some.hpp  descriptor_holder.hpp  io_base.hpp  strand.hpp  tags.hpp  types.hpp
wfc/json/: json.hpp  name.hpp
wfc/jsonrpc/: ad_callback.hpp  ad_invoke.hpp  ad_send_json.hpp  aspect.hpp  aspect_tcp.hpp  basic_domain.hpp  basic_engine.hpp  basic_options.hpp  connection_stream.hpp  consumer_adapter.hpp  gateway.hpp  (+33 more)
wfc/jsonrpc.old/: ad_invoke.hpp  aspect.hpp  client.hpp  connection_stream.hpp  server_tcp.hpp  server_tcp_config.hpp
(+1526 files in other folders)
