add_executable(example01 example01.cpp)
target_link_libraries(example01 wfc)

add_executable(example02 example02.cpp)
target_link_libraries(example02 wfc)

add_executable(example03 example03.cpp)
target_link_libraries(example03 wfc)

add_executable(example04 example04.cpp)
target_link_libraries(example04 wfc)

add_executable(example05 example05.cpp)
target_link_libraries(example05 wfc)

add_executable(example06 example06.cpp)
target_link_libraries(example06 wfc)
