add_executable(registry_test registry_test.cpp)
add_executable(domain_test  domain_test.cpp)
add_executable(instance_test  instance_test.cpp)
add_executable(object_test  object_test.cpp)
add_executable(module_test  module_test.cpp)

target_link_libraries(registry_test PUBLIC wfc )
target_link_libraries(domain_test PUBLIC wfc)
target_link_libraries(instance_test PUBLIC wfc)
target_link_libraries(object_test PUBLIC wfc)
target_link_libraries(module_test PUBLIC wfc)

wci_test(TARGET registry_test COMMAND registry_test )
wci_test(TARGET domain_test  COMMAND domain_test )
wci_test(TARGET instance_test COMMAND instance_test)
wci_test(TARGET object_test COMMAND object_test)
wci_test(TARGET module_test COMMAND module_test)
